--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "ant-design-vue": "^4.2.3",
     "qrcode": "^1.5.3",
     "tslib": "2.3.1",
-    "vue": "3.4.27"
+    "vue": "3.4.27",
+    "vue-router": "^4.4.0"
   },
   "devDependencies": {
     "@fluentui/react": "^8.106.4",
@@ -40,6 +41,7 @@
     "spfx-fast-serve-helpers": "~1.18.0",
     "typescript": "4.7.4",
     "vue-loader": "^17.4.2",
-    "vue-template-compiler": "^2.7.16"
+    "vue-template-compiler": "^2.7.16",
+    "webpack-merge": "5.2.0"
   }
 }
